--- a/trunk/doc/report.tex
+++ b/trunk/doc/report.tex
@@ -721,7 +721,8 @@ etapas.
   
 \bibitem{oprofile}
   J. Levon,
-  \emph{oprofile: hardware profiler for Linux systems}, {\tt http://oprofile.sourceforge.net}.
+  \emph{oprofile: hardware profiler for Linux systems},
+       {\tt http://oprofile.sourceforge.net}.
   
 \bibitem{hennessy-patterson}
   John. L. Hennesy, David A. Patterson,
@@ -730,7 +731,8 @@ etapas.
 
 \bibitem{intel}
   Intel Press,
-  \emph{Intel64 and IA-32 Architectures Software Developer's Manual - Volume 3B: System Programming Guide, Part 2},
+  \emph{Intel64 and IA-32 Architectures Software Developer's Manual - Volume
+    3B: System Programming Guide, Part 2},
   March 2010.
 
 \bibitem{what}
@@ -745,11 +747,13 @@ etapas.
   
 \bibitem{automatic-performance-analysis}
   T. Margalef, J. Jorba, O. Morajko, A. Morajko, E. Luque,
-  \emph{Different approaches to automatic performance analysis of distributed applications},
+  \emph{Different approaches to automatic performance analysis of distributed
+    applications},
   2004.
   
 \bibitem{capturing-performance-knowledge}
-  K. Huck, O. Hernandez, V. Bui, S. Chandrasekaran, B. Chapman, A. Malony, L McInnes, B. Norris,
+  K. Huck, O. Hernandez, V. Bui, S. Chandrasekaran, B. Chapman, A. Malony,
+  L McInnes, B. Norris,
   \emph{Capturing performance knowledge for automated analysis},
   2008.
   
@@ -760,7 +764,8 @@ etapas.
   
 \bibitem{intro-software-performance}
   C. Smith,
-  \emph{Introduction to software performance engineering: origins and outstanding problems},
+  \emph{Introduction to software performance engineering: origins and
+    outstanding problems},
   2007.
 
 \bibitem{future-software-performance}
@@ -779,17 +784,18 @@ etapas.
        
 \bibitem{papi}
   University of Tennessee,
-  \emph{Performance Application Programming Interface}, {\tt http://icl.cs.utk.edu/papi}.
+  \emph{Performance Application Programming Interface},
+       {\tt http://icl.cs.utk.edu/papi}.
        
 \bibitem{amdahl}
   G. M. Amdahl,
-  \emph{Validity of single-processor approach to achieving large-scale computing
-    capability},
+  \emph{Validity of single-processor approach to achieving large-scale
+    computing capability},
   Proceedings of AFIPS Conference, Reston, VA. 1967. pp. 483-485.
   
 \bibitem{twelve-ways}
-  D. Bailey, \emph{Twelve Ways to Fool the Masses When Giving Performance Results
-    on Parallel Computers},
+  D. Bailey, \emph{Twelve Ways to Fool the Masses When Giving Performance
+    Results on Parallel Computers},
   RNR Technical Report, RNR-90-020, NASA Ames Research Center, 1991.
   
 \bibitem{gustafson}
@@ -802,18 +808,24 @@ etapas.
   Communication of the ACM Volume 33 Number 5, May 1990.
   
 \bibitem{myth}
-  {Lee, Victor W. and Kim, Changkyu and Chhugani, Jatin and Deisher, Michael and Kim, Daehyun and Nguyen, Anthony D. and Satish, Nadathur and Smelyanskiy, Mikhail and Chennupaty}, Srinivas, and Hammarlund, Per and Singhal, Ronak and Dubey, Pradeep,
-  \emph{Debunking the 100X GPU vs. CPU myth: an evaluation of throughput computing on CPU and GPU},
+  {Lee, Victor W. and Kim, Changkyu and Chhugani, Jatin and Deisher, Michael
+    and Kim, Daehyun and Nguyen, Anthony D. and Satish, Nadathur and
+    Smelyanskiy, Mikhail and Chennupaty}, Srinivas, and Hammarlund, Per and
+  Singhal, Ronak and Dubey, Pradeep,
+  \emph{Debunking the 100X GPU vs. CPU myth: an evaluation of throughput
+    computing on CPU and GPU},
   2010.
   
 \bibitem{stream}
   John D. McCalpin,
-  \emph{A Survey of Memory Bandwidth and Machine Balance in Current High Performance Computers},
+  \emph{A Survey of Memory Bandwidth and Machine Balance in Current High
+    Performance Computers},
   1995.
   
 \bibitem{counters}
   Dong H. Ahn and Jeffrey S. Vetter,
-  \emph{Scalable Analysis Techniques for Microprocessor Performance Counter Metrics},
+  \emph{Scalable Analysis Techniques for Microprocessor Performance Counter
+    Metrics},
   2002.
   
 \bibitem{linpack}
@@ -823,7 +835,8 @@ etapas.
   
 \bibitem{hpl}
   A. Petitet, R. C. Whaley, J. Dongarra and A. Cleary, 
-  \emph{HPL - A Portable Implementation of the High-Performance Linpack Benchmark for Distributed-Memory Computers},
+  \emph{HPL - A Portable Implementation of the High-Performance Linpack
+    Benchmark for Distributed-Memory Computers},
   2008.
   
 \bibitem{parallel-programming}
