initial draft in future work

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -705,12 +705,28 @@ artesanal no es buena.
 
 \chapter{Trabajo Futuro}
 
-Este cap\'itulo propone.
+Este trabajo fue realizado pensando en ser utilizado como un primer paso
+a una implementaci\'on pr\'actica del m\'etodo propuesto, incluyendo soporte
+autom\'atico para al utilizaci\'on de las herramientas y la generaci\'on de
+reportes de an\'alisis de rendimiento.
 
-Una librer\'ia m\'as infrastructura para soporte de an\'alisis de modo
-autom\'atico. Generaci\'on de reporte de rendimiento autom\'atico para guiar
-optimizaciones. An\'alisis de mejora posible seg\'un formulas aplicadas a
-etapas.
+\bigskip
+
+La implementaci\'on de nuevas tecnolog\'ias para el an\'alisis de rendimiento
+es incesante y continua, los siguientes proyectos est\'an ampliamente
+relacionados con este estudio.
+
+\begin{itemize}
+\item Proyecto A: descripci\'on del proyecto A.
+\item Proyecto B: descripci\'on del proyecto B.
+\item Proyecto C: descripci\'on del proyecto C.
+\end{itemize}
+
+\bigskip
+
+La utilizacion de estas ideas en una aplicacion del mundo real es materia
+pendiente, otra posibilidad es reimplementar desde cero alguna aplicaci\'on
+cient\'ifica en colaboracion con algun grupo de investigaci\'on.
 
 \begin{thebibliography}{9}
 
