--- a/trunk/doc/report.tex
+++ b/trunk/doc/report.tex
@@ -662,6 +662,16 @@ siguientes:
 
 \subsection{ejemplos}
 
+\chapter{Modelo}
+
+\chapter{Procedimiento de An\'alisis}
+
+\section{Proceso}
+
+\section{Etapas}
+
+\section{Soporte}
+
 \chapter{Casos de Estudio}
 
 Este cap\'itulo aplica.
@@ -741,6 +751,13 @@ void queen() {
 \end{verbatim}
 
 \section{Transformadas de {\it Fourier}}
+
+Una transformada de {\it Fourier} transforma una se\~nal digitalizada en una
+representaci\'on matem\'atica de las frecuencias que la componen.
+Su aplicaci\'on principal se da en problemas relacionados con el movimiento de
+ondas como en la \'optica y electromagnetismo.
+
+\bigskip
 
 El c\'odigo fuente de una implementaci\'on simplista se encuentra adjuntado en
 el ap\'endice. Al aplicar las herramientas vistas previamente se identifica
